--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "vaka-analiz",
+  "name": "place-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "antd": "^4.15.2",
+    "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "env-cmd": "^10.1.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.1.1",
+    "netlify-cli": "^3.21.0",
+    "node-sass": "^5.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "stylelint-config-prettier": "^8.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "env-cmd -f .env.development react-app-rewired start",
+    "build": "env-cmd -f .env.development react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +47,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.13.10",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "add": "^2.0.6",
+    "customize-cra": "^0.2.10",
+    "eslint": "^7.21.0",
+    "eslint-detailed-reporter": "^0.7.3",
+    "eslint-plugin-react": "^7.12.4",
+    "react-app-rewired": "^2.0.2",
+    "yarn": "^1.7.0"
   }
 }
